# EdiTeX-GUI

./: .gitignore  LICENSE  README.md  launch.bat  pyproject.toml
docs/: architecture.md  installation.md  mcp-integration.md  user-guide.md
src/: __main__.py  api.py  app.py  state.py
src/editor/: compiler.py  component.py  file_manager.py  pdf_viewer.py  synctex.py
src/mcp/: __main__.py  bridge.py  server.py
src/panels/: bibliography.py  errors.py  figures.py  templates.py
src/utils/: config.py  latex_parser.py
templates/: acm.tex  arxiv.tex  basic.tex  ieee.tex
tests/: conftest.py  test_api.py  test_compiler.py  test_latex_parser.py
