[project]
name = "editex-gui"
version = "0.1.0"
description = "EdiTeX-GUI: A web-based LaTeX editor with real-time PDF preview and MCP integration for AI-assisted editing via Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Ugur Eren" },
]
keywords = ["latex", "editor", "mcp", "claude", "nicegui", "pdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Editors",
    "Topic :: Text Processing :: Markup :: LaTeX",
]

[project.urls]
Homepage = "https://github.com/ugureren/editex-gui"
Repository = "https://github.com/ugureren/editex-gui"
Documentation = "https://github.com/ugureren/editex-gui/tree/main/docs"
Issues = "https://github.com/ugureren/editex-gui/issues"

dependencies = [
    "bibtexparser>=1.4.4",
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "nicegui>=3.8.0",
    "pymupdf>=1.27.1",
    "watchfiles>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
